:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.


This document summarizes the major changes in recent releases.  For a
more detailed list of changes, please see the `Docutils History`_.

.. _Docutils History: HISTORY.html

.. contents::

Future changes
==============

* »Prune« the doctree (no change to the reST input syntax):

  - "doctest" element -> literal block with "pycon" (python-console)
    class argument and syntax highlight (like the "code" directive),
  - special admonitions (note, hint, warning, ...) -> generic "admonition"
    element with class attribute and auto-generated title.

* Move to single source for Python 2 and Python 3, slowly.
  See `Porting Python 2 Code to Python 3`_ and
  `future: clean single-source support for Python 2/3`_

  - Drop support for python 2.4 after release 0.12.

.. _Porting Python 2 Code to Python 3: https://docs.python.org/3/howto/pyporting.html
.. _future\: clean single-source support for Python 2/3: http://python-future.org

Changes Since 0.12
==================

* docutils/writers/

  - New HTML writers generating `HTML 5`_ and `XHTML 1.1`_.
    
    New stylesheet ``html-base.css`` for default layout using CSS 2.1.

* tools/

  - New front-ends ``rst2xhtml.py`` and ``rst2html5.py`` for the
    corresponding writers.

.. _HTML 5: http://www.w3.org/TR/html5/
.. _XHTML 1.1: http://www.w3.org/TR/xhtml11/


Release 0.12 (2014-07-06)
=========================

Small changes only, release current state

Release 0.11 (2013-07-22)
=========================

* General

  - Apply [ 2714873 ] Fix for the overwritting of document attributes.
  - Support embedded aliases within hyperlink references.
  - Fix [ 228 ] try local import of docutils components (reader, writer, parser,
    language module) before global search.

* docutils/parsers/rst/directives/tables.py
